support env JVM_ARGS